--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build --output public",
+		"build": "vite build",
 		"preview": "vite preview"
 	},
 	"dependencies": {
 		"preact": "^10.20.0",
-		"preact-iso": "^2.6.2"
+		"preact-iso": "^2.6.3",
+		"preact-render-to-string": "^6.5.3"
 	},
 	"devDependencies": {
 		"@preact/preset-vite": "^2.8.2",
